fixed alignment for nav

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -35,12 +35,10 @@
         align-items: center;
         font-size: 1.8rem;
         font-weight: 300;
-
         & a {
             color: $color-grey-light-1;
             text-decoration: none;
             transition: all 0.1s;
-
             &:not(:last-child) {
                 margin-right: 4rem;
                 @media only screen and (max-width: $bp-medium) {
@@ -50,7 +48,6 @@
                     margin-right: 2rem;
                 }
             }
-
             &:hover {
                 color: $color-primary-light;
                 transform: scale(1.1);
@@ -58,12 +55,18 @@
         }
 
         @media only screen and (max-width: $bp-large) {
-            margin-left: 7.5rem;
         }
         @media only screen and (max-width: $bp-medium) {
+            margin-left: 5rem;
             font-size: 1.6rem;
         }
         @media only screen and (max-width: $bp-small) {
+            margin-left: 1rem;
+            margin-right: 5.6rem;
+            font-size: 1.6rem;
+            font-weight: 800;
+        }
+        @media only screen and (max-width: $bp-smallest) {
             margin-left: 1rem;
             margin-right: 5.6rem;
             font-size: 1.4rem;
@@ -76,7 +79,7 @@
         align-items: center;
         fill: $color-grey-light-1;
         padding-right: 1rem;
-        margin-left: 21rem;
+        margin-left: 16rem;
 
         & > * {
             padding: 0 0.8rem;
@@ -87,6 +90,9 @@
 
         &--icon-box {
             position: relative;
+            @media only screen and (max-width: $bp-small) {
+                position: absolute;
+            }
         }
 
         &--icon {
@@ -107,16 +113,12 @@
         }
 
         @media only screen and (max-width: $bp-large) {
-            margin-left: 0;
         }
         @media only screen and (max-width: $bp-medium) {
+            margin-left: 0;
             & > * {
                 padding: 0 0.5rem;
             }
-        }
-
-        @media only screen and (max-width: $bp-small) {
-            position: absolute;
         }
     }
 }
